# UpChat

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  UpChatTest.cpp
UpChat/: CMakeLists.txt
UpChat/Core/: CMakeLists.txt
UpChat/Core/inc/: Connection.h  PingPong.h  PlatformAPI.h  Socket.h
UpChat/Core/src/Common/: Connection.cpp  Socket.cpp
UpChat/Server/: CMakeLists.txt
UpChat/Server/src/: Server.cpp  Server.h  UserData.h
